<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="64dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:text="@string/conectar" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/correo"
        android:textSize="20sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:textSize="24sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:backgroundTint="#D8D8D8"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:text="@string/iniciar_sesion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/olvidaste_tu_contrase_a"
        android:textColor="#2196F3"
        android:textSize="20sp" />

</LinearLayout>